time to release again...

--- a/lib/fsus04.fnal.gov.cfg
+++ b/lib/fsus04.fnal.gov.cfg
@@ -33,7 +33,7 @@ set host_dat(h2f,fsui02)	SunOS+5
 #
 # Environment variables to pass in
 #
-set os_dat(ENVVARS)	{DISPLAY}
+set os_dat(ENVVARS)	{}
 
 set os_dat(COMMANDS)    {}
 foreach f $os_dat(LIST)  {
