--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -119,7 +119,7 @@ set os_dat(PATH,Linux+2) "/bin:/sbin:/usr/bin:/usr/local/bin:/usr/X11R6/bin"
 #
 # Environment variables to pass in
 #
-set os_dat(ENVVARS)	{DISPLAY CVSROOT}
+set os_dat(ENVVARS)	{CVSROOT}
 
 #
 # some items to make life easier
