--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -42,7 +42,7 @@ set host_dat(h2f,fsui01)	SunOS+5+Oracle
 #
 # Environment variables to pass in
 #
-set os_dat(ENVVARS)	{DISPLAY CVSROOT}
+set os_dat(ENVVARS)	{CVSROOT}
 
 # set env(CVSROOT)   cvsuser@dcdlaa.fnal.gov:/usr/products/olsshare/cvs
 # set env(DPRODUCTS) /usr/products/src1/devel_database
