--- a/lib/dcdsv0.fnal.gov.cfg
+++ b/lib/dcdsv0.fnal.gov.cfg
@@ -6,7 +6,7 @@ proc productroot { flavor } {
         return "/scratch/${product}-${version}-${flavor}"
     }
     if { "$flavor" == "CYGWIN32_NT" } {
-        return "/c/people/buildmanager/${product}-${version}-${flavor}"
+        return "/e/scratch/${product}-${version}-${flavor}"
     }
     if { "$flavor" == "SunOS+5+Oracle" } {
         return "\$HOME/scratch/${product}-${version}-${flavor}"
@@ -15,7 +15,7 @@ proc productroot { flavor } {
 }
 
 # operating systems to run on
-set host_dat(LIST)  {dcdmwm dcdlaa condor bldirix65 trocious outland enterprise boise fndapj}
+set host_dat(LIST)  {dcdmwm dcdlaa condor bldirix65 trocious outland enterprise boise bldnt40}
 
 # whether we should do a given host by default
 set host_dat(do,dcdmwm)		1
@@ -26,7 +26,7 @@ set host_dat(do,trocious)	1
 set host_dat(do,outland)	1
 set host_dat(do,enterprise)	1
 set host_dat(do,boise)		1
-set host_dat(do,fndapj)		0
+set host_dat(do,bldnt40)		0
 
 set host_dat(h2f,dcdmwm)	AIX+4.1
 set host_dat(h2f,dcdlaa)	IRIX+5.3
@@ -36,7 +36,7 @@ set host_dat(h2f,outland)	OSF1+V3
 set host_dat(h2f,enterprise)	OSF1+V4
 set host_dat(h2f,boise)		SunOS+5
 set host_dat(h2f,trocious)	Linux+2
-set host_dat(h2f,fndapj)	CYGWIN32_NT
+set host_dat(h2f,bldnt40)	CYGWIN32_NT
 set host_dat(h2f,fsui01)	SunOS+5+Oracle
 
 #
