--- a/lib/system.cfg
+++ b/lib/system.cfg
@@ -35,7 +35,7 @@ proc productroot { flavor } {
 # followed by a blank.
 # -- amended to be $%# with a space, or a non-dash followed by
 #    a space so ls -l output doesn't give us the heebie geebies
-set promptre {[$%#] $|[^-]> $}
+set promptre {[$%#] $|[^-]> $|[^-]>\[[0-9]+;[0-9]+f$}
 
 #
 # any of errorlist or cmdstartre stuff should match
